// Copyright (c) 2024 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate service protocol, which is
// released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/proto/blob/main/LICENSE

syntax = "proto3";

import "google/protobuf/empty.proto";
import "restate/common.proto";
import "restate/node.proto";

package restate.node_svc;

service NodeSvc {
  // Get identity information from this node.
  rpc GetIdent(google.protobuf.Empty) returns (IdentResponse);

  // Create a bidirectional node-to-node stream
  rpc CreateConnection(stream restate.node.Message)
      returns (stream restate.node.Message);

  rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse);
}

message IdentResponse {
  restate.common.NodeStatus status = 1;
  restate.common.NodeId node_id = 2;
  string cluster_name = 3;
  // indicates which roles are enabled on this node
  repeated string roles = 4;
  // Age of the running node in seconds (how many seconds since the daemon
  // started)
  uint64 age_s = 5;
  restate.common.AdminStatus admin_status = 6;
  restate.common.WorkerStatus worker_status = 7;
  restate.common.LogServerStatus log_server_status = 8;
  restate.common.MetadataServerStatus metadata_server_status = 9;
  uint32 nodes_config_version = 10;
  uint32 logs_version = 11;
  uint32 schema_version = 12;
  uint32 partition_table_version = 13;
}

message GetMetadataRequest {
  // If set, we'll first sync with metadata store to esnure we are returning the latest value.
  // Otherwise, we'll return the local value on this node.
  bool sync = 1;
  restate.node.MetadataKind kind = 2;
}

message GetMetadataResponse {
  // polymorphic. The value depends on the MetadataKind requested
  bytes encoded = 1;
}
