// Copyright (c) 2024 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate service protocol, which is
// released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/proto/blob/main/LICENSE

syntax = "proto3";

import "google/protobuf/empty.proto";

package restate.metadata_server_network_svc;

// Grpc service definition for the metadata store network implementation.
service MetadataServerNetworkSvc {
  rpc ConnectTo(stream NetworkMessage) returns (stream NetworkMessage);

  // Try to join an existing metadata store cluster
  rpc JoinCluster(JoinClusterRequest) returns (JoinClusterResponse);
}

message NetworkMessage {
  bytes payload = 1;
}

message JoinClusterRequest {
  uint32 node_id = 1;
  int64 created_at_millis = 2;
}

message JoinClusterResponse {
  // might be none if talking to Restate <= 1.3.0
  optional uint32 nodes_config_version = 1;
}

